fix testomonial design to fit on mobile

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -3,10 +3,10 @@
 
 .testimonials {
   text-align: center;
+  margin: 16px;
 
   .testimonial {
-    width: 50%;
-    margin: 0 16px;
+    width: 100%;
 
     .testimonial-heading {
       font-family: Outfit;
